force-app/main/default/objects/Triage_Rule__mdt/Triage_Rule__mdt.object-meta.xml
<CustomObject>
    <description
    >Synthetic keyword rules for deterministic case triage. Category weight feeds category scoring; urgency weight feeds urgency scoring.</description>
    <label>Triage Rule</label>
    <pluralLabel>Triage Rules</pluralLabel>
</CustomObject>