force-app/main/default/objects/Triage_Rule__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category this keyword votes for. Blank for urgency-only keywords.</description>
    <label>Category</label>
    <length>40</length>
    <type>Text</type>
</CustomField>