force-app/main/default/objects/Triage_Rule__mdt/fields/Category_Weight__c.field-meta.xml
<CustomField>
    <fullName>Category_Weight__c</fullName>
    <description>Points added to the category score.</description>
    <label>Category Weight</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>