force-app/main/default/objects/Triage_Rule__mdt/fields/Keyword__c.field-meta.xml
<CustomField>
    <fullName>Keyword__c</fullName>
    <description>Lower-case word or phrase matched on word boundaries.</description>
    <label>Keyword</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>