force-app/main/default/objects/Triage_Rule__mdt/fields/Urgency_Weight__c.field-meta.xml
<CustomField>
    <fullName>Urgency_Weight__c</fullName>
    <description>Points added to the urgency score.</description>
    <label>Urgency Weight</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>